--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
                     <!-- Basic Home Page Template -->
                     <div class="row separator">
                         <section class="span4 articles-list">
-                            <h3>Featured Articles</h3>
+                            <h3>点赞最多</h3>
                             <ul class="articles">
                                 <li class="article-entry standard">
                                     <h4><a href="single.html">Integrating WordPress with Your Website</a></h4>
@@ -45,7 +45,7 @@
                         </section>
 
                         <section class="span4 articles-list">
-                            <h3>Latest Articles</h3>
+                            <h3>最新上传</h3>
                             <ul class="articles">
                                 <li class="article-entry standard">
                                     <h4><a href="single.html">Integrating WordPress with Your Website</a></h4>
@@ -83,13 +83,13 @@
 
                     <div class="row home-listing-area">
                         <div class="span8">
-                            <h2>Categories</h2>
+                            <h2>分类</h2>
                         </div>
                     </div>
 
                     <div class="row separator">
                         <section class="span4 articles-list">
-                            <h3><a href="single.html">WordPress for Beginners</a> <span>(4)</span></h3>
+                            <h3><a href="single.html">楼凤兼职</a> <span>(4)</span></h3>
                             <ul class="articles">
                                 <li class="article-entry image">
                                     <h4><a href="single.html">New To WordPress &#8211; Where to Start</a></h4>
@@ -115,7 +115,7 @@
                         </section>
 
                         <section class="span4 articles-list">
-                            <h3><a href="single.html">Designing in WordPress</a> <span>(4)</span></h3>
+                            <h3><a href="single.html">精品推荐</a> <span>(4)</span></h3>
                             <ul class="articles">
                                 <li class="article-entry image">
                                     <h4><a href="single.html">Using Images</a></h4>
@@ -144,7 +144,7 @@
                     <div class="row separator">
 
                         <section class="span4 articles-list">
-                            <h3><a href="single.html">Theme Development</a> <span>(4)</span></h3>
+                            <h3><a href="single.html">洗浴中心</a> <span>(4)</span></h3>
                             <ul class="articles">
                                 <li class="article-entry standard">
                                     <h4><a href="single.html">WordPress CSS Information and Techniques</a></h4>
@@ -170,7 +170,7 @@
                         </section>
 
                         <section class="span4 articles-list">
-                            <h3><a href="single.html">Website Dev</a> <span>(4)</span></h3>
+                            <h3><a href="single.html">酒店会所</a> <span>(4)</span></h3>
                             <ul class="articles">
                                 <li class="article-entry standard">
                                     <h4><a href="single.html">WordPress Site Maintenance</a></h4>
@@ -198,7 +198,7 @@
 
                     <div class="row separator">
                         <section class="span4 articles-list">
-                            <h3><a href="single.html">WordPress Plugins</a> <span>(4)</span></h3>
+                            <h3><a href="single.html">足浴发廊</a> <span>(4)</span></h3>
                             <ul class="articles">
                                 <li class="article-entry video">
                                     <h4><a href="single.html">Using Video</a></h4>
@@ -224,7 +224,7 @@
                         </section>
 
                         <section class="span4 articles-list">
-                            <h3><a href="single.html">Advanced Techniques</a> <span>(4)</span></h3>
+                            <h3><a href="single.html">全国QQ群</a> <span>(4)</span></h3>
                             <ul class="articles">
                                 <li class="article-entry standard">
                                     <h4><a href="single.html">Using Javascript</a></h4>
@@ -258,20 +258,9 @@
 
                     <section class="widget">
                         <div class="support-widget">
-                            <h3 class="title">Support</h3>
-                            <p class="intro">Need more support? If you did not found an answer, contact us for further help.</p>
-                        </div>
-                    </section>
-
-                    <section class="widget">
-                        <div class="quick-links-widget">
-                            <h3 class="title">Quick Links</h3>
-                            <ul id="menu-quick-links" class="menu clearfix">
-                                <li><a href="index-2.html">Home</a></li>
-                                <li><a href="articles-list.html">Articles List</a></li>
-                                <li><a href="faq.html">FAQs</a></li>
-                                <li><a href="contact.html">Contact</a></li>
-                            </ul>
+                            <h3 class="title">会员</h3>
+                            <a href="#"> 登录</a> /
+                            <a href="#"> 注册</a>
                         </div>
                     </section>
 
