--- a/templates/base.html
+++ b/templates/base.html
@@ -35,7 +35,7 @@
                 <div class="container">
                     <div class="logo-container">
                         <!-- Website Logo -->
-                        <a href="index-2.html"  title="Knowledge Base Theme">
+                        <a href="/"  title="Knowledge Base Theme">
                             <img src="../static/images/logo.png" alt="Knowledge Base Theme">
                         </a>
                         <span class="tag-line">娱乐信息分享</span>
@@ -44,13 +44,14 @@
                     <nav class="main-nav">
                         <div class="menu-top-menu-container">
                             <ul id="menu-top-menu" class="clearfix">
-                                <li class="current-menu-item"><a href="#">楼凤兼职</a></li>
-                                <li><a href="#">精品推荐</a></li>
-                                <li><a href="#">洗浴中心</a></li>
-                                <li><a href="#">酒店会所</a></li>
-                                <li><a href="#">足浴发廊</a></li>
-                                <li><a href="#">全国QQ群</a></li>
-                                <li><a href="#">男模/鸭子</a></li>
+                                <li><a href="/">首页</a></li>
+                                <li class="current-menu-item"><a href="/publish/lfjz">楼凤兼职</a></li>
+                                <li><a href="/publish/jptj">精品推荐</a></li>
+                                <li><a href="/publish/xyzx">洗浴中心</a></li>
+                                <li><a href="/publish/jdhs">酒店会所</a></li>
+                                <li><a href="/publish/zyfl">足浴发廊</a></li>
+                                <li><a href="/publish/qq">全国QQ群</a></li>
+                                <li><a href="/publish/nmyz">男模/鸭子</a></li>
 
                             </ul>
                         </div>
