--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,6 @@
         <link rel="shortcut icon" href="/static/images/favicon.png" />
 
         <!-- Style Sheet-->
-        <link rel="stylesheet" href="/static/style.css"/>
         <link rel='stylesheet' id='bootstrap-css-css' href='/static/css/bootstrap5152.css?ver=1.0' type='text/css' media='all' />
         <link rel='stylesheet' id='responsive-css-css' href='/static/css/responsive5152.css?ver=1.0' type='text/css' media='all' />
         <link rel='stylesheet' id='pretty-photo-css-css' href='/static/js/prettyphoto/prettyPhotoaeb9.css?ver=3.1.4' type='text/css' media='all' />
@@ -36,7 +35,7 @@
                     <div class="logo-container">
                         <!-- Website Logo -->
                         <a href="/"  title="Knowledge Base Theme">
-                            <img src="../static/images/logo.png" alt="Knowledge Base Theme">
+                            <img src="/static/images/logo.png" alt="Knowledge Base Theme">
                         </a>
                         <span class="tag-line">娱乐信息分享</span>
                     </div>
@@ -117,14 +116,14 @@
 
         <a href="#top" id="scroll-top"></a>
         <!-- script -->
-        <script type='text/javascript' src='static/js/jquery-1.8.3.min.js'></script>
-        <script type='text/javascript' src='static/js/jquery.easing.1.3.js'></script>
-        <script type='text/javascript' src='static/js/prettyphoto/jquery.prettyPhoto.js'></script>
-        <script type='text/javascript' src='static/js/jflickrfeed.js'></script>
-        <script type='text/javascript' src='static/js/jquery.liveSearch.js'></script>
-        <script type='text/javascript' src='static/js/jquery.form.js'></script>
-        <script type='text/javascript' src='static/js/jquery.validate.min.js'></script>
-        <script type='text/javascript' src='static/js/custom.js'></script>
+        <script type="text/javascript" src="/static/js/jquery-1.8.3.min.js"></script>
+        <script type='text/javascript' src='/static/js/jquery.easing.1.3.js'></script>
+        <script type='text/javascript' src='/static/js/prettyphoto/jquery.prettyPhoto.js'></script>
+        <script type='text/javascript' src='/static/js/jflickrfeed.js'></script>
+        <script type='text/javascript' src='/static/js/jquery.liveSearch.js'></script>
+        <script type='text/javascript' src='/static/js/jquery.form.js'></script>
+        <script type='text/javascript' src='/static/js/jquery.validate.min.js'></script>
+        <script type='text/javascript' src='/static/js/custom.js'></script>
         {% block footer %}
         {% endblock footer %}
     </body>
