--- a/templates/article_list.html
+++ b/templates/article_list.html
@@ -7,6 +7,7 @@
 
 {% block container %}
     <div class="tmp"></div>
+    {% csrf_token %}
     <div class="container_jc">
         <div class="filters">
             <div class="filter-item">
@@ -55,7 +56,47 @@
                 </div>
             </div>
         </div>
+        <div id="posts" class="posts grids waterfall clearfix">
+            {% for art in articles %}
+                <div class="post grid">
+                    <div class="img">
+                        <a href="#" title="{{ art.title }}" target="_blank" rel="bookmark">
+                            <img src="{{ art.main_photo_path }}" class="thumb" alt="{{ art.title }}">
+                        </a>
+                    </div>
+                    <h3 itemprop="name headline">
+                        "【"<a href="#" rel="tag">{{ art.article_type.article_type_name }}</a>"】"
+                        <a itemprop="url" rel="bookmark" href="#" title="{{ art.title }}" target="_blank">{{ art.title }}</a>
+                    </h3>
+                    <div class="cats">
+                        <a href="#">地区: {{ art.provinces.provices_name }} - {{ art.city.city_name }}</a>
+                    </div>
+                    <div class="grid-meta">
+                        <span class="time">
+                            <i class="dripicons dripicons-preview"></i>{{ art.create_time }}
+                        </span>
+                        <span class="views">
+                            <i class="dripicons dripicons-preview"></i>{{ art.view_num }}
+                        </span>
+                        <span class="comments">
+                            <i class="dripicons dripicons-message"></i>{{ art.comment_num }}
+                        </span>
+                    </div>
+                </div>
+            {% endfor %}
+        </div>
     </div>
+
+    {% if articles.has_previous %}
+        <li>上页: {{ articles.previous_page_number }}</li>
+        <a href="#">上一页</a>
+    {% endif %}
+    <li>当前页码：{{ contacts.number }}</li>
+    {% if articles.has_next %}
+        <li>下页: {{ articles.next_page_number }}</li>
+        <a href="#">下一页</a>
+    {% endif %}
+
 {% endblock %}
 
 
