--- a/static/css/article_list.css
+++ b/static/css/article_list.css
@@ -11,6 +11,9 @@ li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td{
     vertical-align:baseline;
     background:transparent
 }
+
+
+
 .tmp{margin-bottom: 20px}
 .container_jc{position:relative;margin:0 auto;max-width:1200px;}
 .filters{padding:15px 20px;border: 1px solid #eaeaea;margin-bottom:30px;border-radius: 3px;}
@@ -60,4 +63,27 @@ li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td{
     break-inside: avoid;
     color:#fff;
 }
+.pagination{
+    padding:0 10px;
+    margin: 0 0 30px;
+    text-align: center;font-size:12px;display:block;border-radius:0;}
+.excerpts .pagination{margin-bottom: 10px;}
+.pagination ul{display:inline-block !important;*display:inline;*zoom:1;margin-left:0;margin-bottom:0;padding:0}
+.pagination ul > li{display:inline}
+.pagination ul > li > a,.pagination ul > li > span{margin:0 2px;float:left;padding:5px 12px;background-color:#ddd;color:#666;border-radius:2px;opacity:.88}
+.pagination ul > li > a:hover,.pagination ul > li > a:focus{opacity:1}
+.pagination ul > .active > a,.pagination ul > .active > span{background-color:#1d1d1d;color:#fff}
+.pagination ul > .active > a,.pagination ul > .active > span{cursor:default}
+.pagination ul > li > span,.pagination ul > .disabled > span,.pagination ul > .disabled > a,.pagination ul > .disabled > a:hover,.pagination ul > .disabled > a:focus{color:#999999;background-color:transparent;cursor:default}
+.pagination-trigger{padding:10px 15px;text-align:center;margin-bottom:20px}
+.pagination-trigger a{margin:0 5px;display:inline-block;padding:8px 25px;text-decoration:none;background-color:#1d1d1d;color:#fff !important;border-radius:2px;opacity:.88}
+.pagination-trigger a:hover{opacity:1}
+.pagination-loading{font-size:16px;text-align:center;color:#999;padding:10px 15px;margin-bottom:20px}
 
+.btn, .cat-nav li.current-menu-item a:after, .grids .grid.grid-tj:after,
+.pagination ul > .active > a,.pagination ul > .active > span, .pagination-trigger a,
+.erphpdown-box .down, .article-tags a:hover, .widget-erphpdown .down, .comt-submit,
+.sign .captcha-clk, .btn-primary, .mocat .more a, .mocat h2:after, .filter a.active,
+.mocat h2 i,.pagemenu li.current_page_item a{
+    background-color:#FF6651 !important;
+}
